[tool.poetry]
name = "twitch-fastapi-modelo"
version = "0.1.0"
description = "API Design Model with FastAPI"
authors = ["Jonatas Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.68.0"
pytest = "^6.2.4"
pytest-sugar = "^0.9.4"
requests = "^2.26.0"
uvicorn = "^0.14.0"
loguru = "^0.5.3"
SQLAlchemy = "^1.4.23"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
